[package]
name = "cloud-vfs"
version = "0.1.0"
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
edition = "2021"
categories = []
description = """
cloud-vfs description.
"""
homepage = "https://github.com/rust-utility/cloud-vfs"
keywords = []
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/rust-utility/cloud-vfs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
